--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <script type="text/javascript" src="js/dataTables.bootstrap4.min.js"></script>
     <!-- 
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/jquery.csv.min.js"></script>
+    <script type="text/javascript" src="js/jquery.csv.min.js"></script>-->
     <script type="text/javascript" src="js/csv_to_html_table.js"></script>
-    -->
+    
 
     <script type="text/javascript">
       function format_link(link){
